testando hover na img

--- a/nft-card/index.html
+++ b/nft-card/index.html
@@ -15,9 +15,11 @@
 
   <main>
     <div id="quadro">
-      <picture>
-        <a href="#"><img class="cubo" src="images/image-equilibrium.jpg" alt="cubo brilhante"></a>
-      </picture>
+
+      <div class="cubo">
+        <!--imagem aqui-->
+      </div>
+      
       <h1><a href="#">Equilibrium #3429</a></h1>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <p class="esquerda">
@@ -40,7 +42,7 @@
   <footer>
     <div class="attribution">
       Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Stella Zen</a>.
+      Coded by <a href="https://github.com/StellaZen" target="_blank">Stella Zen</a>.
     </div>
   </footer>
 </body>
