--- a/nft-card/index.html
+++ b/nft-card/index.html
@@ -15,9 +15,12 @@
 
   <main>
     <div id="quadro">
-      <picture>
-        <a href="#"><img class="cubo" src="images/image-equilibrium.jpg" alt="cubo brilhante"></a>
-      </picture>
+      <div class="cubo">
+        <img src="images/image-equilibrium.jpg" alt="cubo brilhante" class="imagem">
+
+        <div class="sobreposicao"></div>
+      </div>
+
       <h1><a href="#">Equilibrium #3429</a></h1>
       <p>Our Equilibrium collection promotes balance and calm.</p>
       <p class="esquerda">
