--- a/product-preview-card/index.html
+++ b/product-preview-card/index.html
@@ -18,7 +18,12 @@
 
   <main>
     <div class="conteiner">
-      <div class="imagem"><!--imagem aqui--></div>
+
+      <picture>
+        <source media="(max-width:600px)" srcset="./images/image-product-mobile.jpg">
+        <img class="imagem" src="./images/image-product-desktop.jpg" alt="Gabrielle Parfum">
+      </picture>
+
       <div class="texto">
         <p class="primeiro-p">Perfume</p>
         <h1>Gabrielle Essence Eau De Parfum</h1>
