--- a/column-card/index.html
+++ b/column-card/index.html
@@ -45,11 +45,11 @@
       </div>
     </div>
   </main>
-  
-  
-    <!--<div class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-      Coded by <a href="#">Your Name Here</a>.
-    </div>-->
+
+  <footer>
+    <p>Chalange by <a href="https://www.frontendmentor.io/home">Front End Mentor</a>. Coded by <a href="https://github.com/StellaZen">Stella Zen</a> </p>
+  </footer>
+    
+
 </body>
 </html>
