--- a/interactive-rating/index.html
+++ b/interactive-rating/index.html
@@ -34,7 +34,7 @@
       <form action="">
         <fieldset>
           <input type="radio" name="rating" id="score1" value="1">
-          <label for="score1" class="form_label" onclick="changeColor()">1</label>
+          <label for="score1" class="form_label" >1</label>
           <input type="radio" name="rating" id="score2" value="2">
           <label for="score2" class="form_label">2</label>
           <input type="radio" name="rating" id="score3" value="3">
