--- a/interactive-rating/index.html
+++ b/interactive-rating/index.html
@@ -16,7 +16,7 @@
 <body>
 
   <main>
-    <div class="conteiner">
+    <div id="conteiner" class="conteiner">
       <!-- Star Icon -->
       <div class="star">
       <img src="images/icon-star.svg" alt="estrela de cinco pontas amarela">
