--- a/interactive-rating/index.html
+++ b/interactive-rating/index.html
@@ -40,7 +40,7 @@
           <input type="radio" name="rating" id="score5" value="5">
           <label for="score5" class="form_label">5</label>
         </fieldset>
-        <div class="submit" id="submit"><button type="submit">Submit</button></div>
+        <div class="submit" id="submit"><button type="submit" onclick="trocar()">Submit</button></div>
       </form>
     </div>
   </main>
