--- a/interactive-rating/index.html
+++ b/interactive-rating/index.html
@@ -29,11 +29,11 @@
 
       <form>
         <fieldset class="rating-form">
-          <div class="rating-button" onclick="rate(0)"><p>1</p></div>
-          <div class="rating-button" onclick="rate(1)"><p>2</p></div>
-          <div class="rating-button" onclick="rate(2)"><p>3</p></div>
-          <div class="rating-button" onclick="rate(3)"><p>4</p></div>
-          <div class="rating-button" onclick="rate(4)"><p>5</p></div>
+          <div class="rating-button" onclick="mudaCor()"><p>1</p></div>
+          <div class="rating-button" onclick="mudaCor()"><p>2</p></div>
+          <div class="rating-button" onclick="mudaCor()"><p>3</p></div>
+          <div class="rating-button" onclick="mudaCor()"><p>4</p></div>
+          <div class="rating-button" onclick="mudaCor()"><p>5</p></div>
         </fieldset>
         <button type="submit" class="submit" id="submit" onclick="trocar()">Submit</button>
       </form>
