--- a/interactive-rating/index.html
+++ b/interactive-rating/index.html
@@ -30,15 +30,15 @@
       <form>
         <fieldset class="rating-form">
          <input type="radio" name="num" id="num1" oninput="numero()">
-         <label for="num1" class="num" id="label1">1</label>
+         <label for="num1" id="label1">1</label>
          <input type="radio" name="num" id="num2" oninput="numero()">
-         <label for="num2" class="num" id="label2">2</label>
+         <label for="num2" id="label2">2</label>
          <input type="radio" name="num" id="num3" oninput="numero()">
-         <label for="num3" class="num" id="label3">3</label>
+         <label for="num3" id="label3">3</label>
          <input type="radio" name="num" id="num4" oninput="numero()">
-         <label for="num4" class="num" id="label4">4</label>
+         <label for="num4" id="label4">4</label>
          <input type="radio" name="num" id="num5" oninput="numero()">
-         <label for="num5" class="num" id="label5">5</label>
+         <label for="num5" id="label5">5</label>
         </fieldset>
         <button type="submit" class="submit" id="submit">Submit</button>
       </form>
