--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -47,9 +47,9 @@
       <!--icones-->
       <div class="icons" id="icons">
         <p>share</p>
-        <img class="icon" src="images/icon-facebook.svg" alt="icone facebook">
-        <img class="icon" src="images/icon-twitter.svg" alt="icone twitter">
-        <img class="icon" src="images/icon-pinterest.svg" alt="icone pinterest">
+        <a href="https://www.facebook.com/" target="_blank"><img class="icon" src="images/icon-facebook.svg" alt="icone facebook"></a>
+        <a href="https://www.twitter.com/" target="_blank"><img class="icon" src="images/icon-twitter.svg" alt="icone twitter"></a>
+        <a href="https://www.pinterest.com/" target="_blank"><img class="icon" src="images/icon-pinterest.svg" alt="icone pinterest"></a>
         <div class="share2"><!--share 2--></div>
 
       </div>
