--- a/article-preview-component/index.html
+++ b/article-preview-component/index.html
@@ -50,7 +50,7 @@
         <a href="https://www.facebook.com/" target="_blank"><img class="icon" src="images/icon-facebook.svg" alt="icone facebook"></a>
         <a href="https://www.twitter.com/" target="_blank"><img class="icon" src="images/icon-twitter.svg" alt="icone twitter"></a>
         <a href="https://www.pinterest.com/" target="_blank"><img class="icon" src="images/icon-pinterest.svg" alt="icone pinterest"></a>
-        <div class="share2"><!--share 2--></div>
+        <div class="share2" id="botao2" onclick="volta()"><!--share 2--></div>
 
       </div>
 
